Fixed the height of the videos, but there is a BUG that makes the videos sometimes jump a few pixels up!

--- a/assets/css/YT_Style.css
+++ b/assets/css/YT_Style.css
@@ -49,11 +49,11 @@
     bottom: 0;
     min-height: 100%;
     left: 0;
-    min-width: 0%;
+    min-width: 100%;
     overflow: hidden;
     position: absolute;
     right: 0;
-    top: 0%;
+    top: 0;
     z-index: 1;
   }
   
